fix image on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ body {
   
   #home > div:nth-child(2) {
     background-size: contain !important;
-    background-position: center 40% !important;
+    background-position: center 30% !important;
     height: 400px !important;
   }
   
